added some features and edited login page

--- a/CarRent/Views/Account/Login.cshtml
+++ b/CarRent/Views/Account/Login.cshtml
@@ -18,16 +18,15 @@
                 //<form action="Account/Verify" method="post">
                 <div class="input-group">
                     <span><i class="fas fa-user" aria-hidden="true"></i></span>
-                    <input type="text" name="Username" placeholder="Username" required="">
+                    <input type="text" name="Username" placeholder="Kullanıcı adınızı giriniz" required="">
                 </div>
                 <div class="input-group">
                     <span><i class="fas fa-key" aria-hidden="true"></i></span>
-                    <input type="Password" name="Password" placeholder="Password" required="">
+                    <input type="Password" name="Password" placeholder="Şifrenizi giriniz" required="">
                 </div>
                 <button class="btn btn-primary btn-block" type="submit">Giriş</button>
             //</form>
                 }
-                <p class="account">Don't have an account? <a href="#signup">Sign up</a></p>
             </div>
         </div>
         <!-- //main content -->
