--- a/CarRent/Views/Shared/_Layout.cshtml
+++ b/CarRent/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
 
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/Car/Index">
                 <i class="fa-solid fa-car-side"></i>
             </a>
             @Html.ActionLink("#HızlıKirala", "Index", "Car", new { area = "" }, new { @class = "navbar-brand" })
