added seller panel to layout

--- a/CarRent/Views/Shared/_Layout.cshtml
+++ b/CarRent/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                 <ul class="navbar-nav flex-grow-1">
 
                     <li>@Html.ActionLink("Admin Paneli", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Satıcı Paneli", "Index", "Seller", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Hakkında", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Kişi", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Araçlar", "Index", "Car", new { area = "" }, new { @class = "nav-link" })  </li>
