adding review mvc for testimonials

--- a/CarRent/Views/Shared/_Layout.cshtml
+++ b/CarRent/Views/Shared/_Layout.cshtml
@@ -32,10 +32,10 @@
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-
                     <li>@Html.ActionLink("Admin Paneli", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Satıcı Paneli", "Index", "Seller", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Hakkında", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Hakkımızda", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Referanslarımız", "Index", "Review", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Kişi", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Araçlar", "Index", "Car", new { area = "" }, new { @class = "nav-link" })  </li>
                 </ul>
