--- a/CarRent/Views/Car/CarDetails.cshtml
+++ b/CarRent/Views/Car/CarDetails.cshtml
@@ -23,6 +23,13 @@
         </li>
 
         <li class="list-group-item">
+            <strong>Araç Tipi</strong>&nbsp;
+            <span class="">
+                @item.TypeName
+            </span>
+        </li>
+
+        <li class="list-group-item">
             <strong>Plaka</strong>&nbsp;
             <span>@item.LicensePlate&nbsp;</span>
         </li>
