--- a/CarRent/Views/Review/Index.cshtml
+++ b/CarRent/Views/Review/Index.cshtml
@@ -4,15 +4,15 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-@foreach (var item in Model)
-{
-    <section class="bg-light py-5 py-xl-8">
-        <div class="container overflow-hidden">
-            <div class="row gy-4 gy-md-0 gx-xxl-5">
-                <div class="col-12 col-md-4">
+<div class="d-flex">
+    @foreach (var item in Model)
+    {
+        @*<section class="bg-light py-5 py-xl-8">*@
+            @*<div class="container overflow-hidden">*@
+                @*<div class="row gy-4 gy-md-0 gx-xxl-5">*@
+                <div class="col-12 col-md-6">
                     <div class="card border-0 border-bottom border-primary shadow-sm">
-                        <div class="card-body p-4 p-xxl-5">
+                        <div class="card-body p-lg-1">
                             <figure>
                                 <figcaption>
                                     <div class="bsb-ratings text-warning mb-3" data-bsb-star="5" data-bsb-star-off="0"></div>
@@ -26,8 +26,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-}
-
+                @*</div>*@
+            @*</div>*@
+        @*</section>*@
+    }
+</div>
